# file-copier

./: .gitignore  README.md  README.rst  pyproject.toml
file_copier/: __init__.py  config_example.xml  copier.py
files_copier/: app_logger.py  copier.py  files_copier.py
tests/: conftest.py  test_file_copier.py
tests/test_copier/: test_copy_files.py  test_get_root_of_config.py
tests/test_files_copier/: test_check_file_parameters.py  test_copied_files_from_conf.py  test_copy_files.py
