[tool.poetry]
name = "file_copier"
version = "1.0.0"
description = "Copy files defined in xml config"
authors = ["PavliukKonstantin <Pavliuk.Konstantin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

flake8 = "^3.8.3"
autopep8 = "^1.5.3"
flake8-docstrings = "^1.5.0"
isort = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
